WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169357
font variation properties don't need to accept numbers
https://bugs.webkit.org/show_bug.cgi?id=169357
Summary
font variation properties don't need to accept numbers
Myles C. Maxfield
Reported
2017-03-08 09:13:13 PST
https://github.com/w3c/csswg-drafts/issues/524
We should also test calc() with percentages.
Attachments
Patch
(65.38 KB, patch)
2017-03-24 19:29 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-elcapitan
(1023.59 KB, application/zip)
2017-03-24 20:10 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-elcapitan
(1.93 MB, application/zip)
2017-03-24 20:23 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(863.33 KB, application/zip)
2017-03-24 20:39 PDT
,
Build Bot
no flags
Details
Patch
(73.85 KB, patch)
2017-03-24 21:20 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-03-24 19:29:55 PDT
Created
attachment 305353
[details]
Patch
Myles C. Maxfield
Comment 2
2017-03-24 19:32:54 PDT
***
Bug 169321
has been marked as a duplicate of this bug. ***
Build Bot
Comment 3
2017-03-24 20:10:08 PDT
Comment on
attachment 305353
[details]
Patch
Attachment 305353
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3407111
New failing tests: fast/text/font-selection-font-face-parse.html
Build Bot
Comment 4
2017-03-24 20:10:11 PDT
Created
attachment 305356
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5
2017-03-24 20:23:48 PDT
Comment on
attachment 305353
[details]
Patch
Attachment 305353
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3407132
New failing tests: fast/text/font-selection-font-face-parse.html
Build Bot
Comment 6
2017-03-24 20:23:50 PDT
Created
attachment 305357
[details]
Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 7
2017-03-24 20:39:16 PDT
Comment on
attachment 305353
[details]
Patch
Attachment 305353
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3407184
New failing tests: fast/text/font-selection-font-face-parse.html
Build Bot
Comment 8
2017-03-24 20:39:19 PDT
Created
attachment 305358
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 9
2017-03-24 21:20:12 PDT
Created
attachment 305363
[details]
Patch
Antti Koivisto
Comment 10
2017-03-27 10:12:54 PDT
r=me
WebKit Commit Bot
Comment 11
2017-03-27 10:50:37 PDT
Comment on
attachment 305363
[details]
Patch Clearing flags on attachment: 305363 Committed
r214419
: <
http://trac.webkit.org/changeset/214419
>
WebKit Commit Bot
Comment 12
2017-03-27 10:50:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug