Source/WebCore/css/CSSComputedStyleDeclaration.h
@@ -28,11 +28,13 @@
 
 namespace WebCore {
 
+class CSSFontStyleValue;
 class CSSPrimitiveValue;
 class CSSValueList;
 class Color;
 class Element;
 class FilterOperations;
+class FontSelectionValue;
 class MutableStyleProperties;
 class Node;
 class RenderObject;
@@ -63,6 +65,10 @@ public:
     bool propertyMatches(CSSPropertyID, const CSSValue*);
 
     static Ref<CSSValue> valueForFilter(const RenderStyle&, const FilterOperations&, AdjustPixelValuesForComputedStyle = AdjustPixelValues);
+
+    static Ref<CSSPrimitiveValue> fontWeightFromStyleValue(FontSelectionValue);
+    static Ref<CSSPrimitiveValue> fontStretchFromStyleValue(FontSelectionValue);
+    static Ref<CSSFontStyleValue> fontStyleFromStyleValue(FontSelectionValue);
 
 private:
     // The styled element is either the element passed into computedPropertyValue, or the
